--- a/index.html
+++ b/index.html
@@ -67,12 +67,13 @@
     </div>
     <div class="flexbox-container call-to-action">
         <div class="action-text flexbox-item">
-
+            <div class="action-text-header">Subscribe! Subscribe! Subscribe!</div>
+            <div class="action-subtext">Pls subscribe :( :( :(</div>
         </div>
         <button class="action-button flexbox-item">Sign up</button>
     </div>
 </body>
 <footer>
-
+    A project guided by The Odin Project.
 </footer>
 </html>
